# envroll

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  dist-workspace.toml
.github/workflows/: ci.yml  publish-crates.yml
docs/: demo.tape
docs/json-schemas/: diff.schema.json  list.schema.json  log.schema.json  projects.schema.json  status.schema.json
src/: crypto.rs  errors.rs  lib.rs  lock.rs  main.rs  manifest.rs  output.rs  parser.rs  paths.rs  prompt.rs
src/cli/: common.rs  completions.rs  copy.rs  current.rs  diff.rs  edit.rs  exec.rs  export.rs  fork.rs  get.rs  import.rs  init.rs  list.rs  log_cmd.rs  mod.rs  projects.rs  remote.rs  rename.rs  rename_key.rs  rm.rs  save.rs  set.rs  status.rs  sync.rs  use_cmd.rs
src/vault/: fs.rs  git.rs  mod.rs
tests/: completions.rs  env_management.rs  env_switching.rs  error_handling.rs  import_export.rs  init.rs  perf_soak.rs  rename_key.rs  v0_1_3_features.rs
