[package]
name = "envroll"
version = "0.3.0"
edition = "2021"
rust-version = "1.89"
description = "git for your .env files — local-first, encrypted, single-binary environment manager"
authors = ["Adrián Peña"]
license = "MIT"
repository = "https://github.com/AdriiiPRodri/envroll"
homepage = "https://github.com/AdriiiPRodri/envroll"
readme = "README.md"
keywords = ["env", "dotenv", "secrets", "vault", "cli"]
categories = ["command-line-utilities", "config", "development-tools"]
# Trim the crates.io tarball to what a downstream consumer actually needs.
# The CI and cargo-dist configs only matter to maintainers (they live on
# GitHub for anyone who wants to read them), and the integration tests
# depend on `assert_cmd` + a built binary so they're not useful to crate
# consumers either.
exclude = [".github/", "dist-workspace.toml", "tests/"]

[[bin]]
name = "envroll"
path = "src/main.rs"

[lib]
name = "envroll"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
git2 = { version = "0.20", default-features = false, features = ["https"] }
age = { version = "0.11", features = ["armor"] }
rpassword = "7.4"
dotenvy = "0.15"
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
secrecy = "0.10"
sha2 = "0.10"
anstyle = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde_json = "1.0"
# UX layer: errors (miette), tables (tabled), confirmation prompts
# (dialoguer), and sync progress spinners (indicatif). All four agreed on
# in the 2026-05-01 design discussion — see commit history.
miette = { version = "7.6", features = ["derive", "fancy"] }
tabled = { version = "0.20", features = ["ansi"] }
dialoguer = "0.12"
indicatif = "0.18"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[features]
# Full perf soak (100 envs / 50 keys / 200 ms budget). Default test suite ships
# only the lightweight 10-env / 50 ms smoke; the soak runs on a dedicated CI lane.
perf = []

[profile.release]
lto = "fat"
panic = "abort"
strip = true
codegen-units = 1
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
